--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,24 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  margin: 0;
+}
+
+.gallery__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.gallery__item {
+  list-style: none;
+}
+
+.gallery__img {
+  width: 300px;
+  height: 200px;
+  border-radius: 10px;
+}
